* Turn on 1.0.0, and add 1.0 query API support * Change all references to URL in Tin Can data structure to URI * Add Group (Agent subclass) support * Add StatementRef support * Add StatementResults support * Fix duration parsing * Add retrieveVoidedStatement to LRS